cilium/fips-network-policies/dns-vpc.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-coredns-to-vpc-dns
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s:k8s-app: kube-dns
  egress:
    - toCIDR:
        - 10.0.0.2/32
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
