cilium/fips-network-policies/kafka-cilium-netpol.yaml
# Controller quorum: controller ↔ controller on 9093
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kafka-allow-controller-quorum
  namespace: kafka
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: kafka
      k8s:app.kubernetes.io/component: controller
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
            k8s:app.kubernetes.io/name: kafka
            k8s:app.kubernetes.io/component: controller
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
            k8s:app.kubernetes.io/name: kafka
            k8s:app.kubernetes.io/component: controller
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
---
# Brokers → controllers on 9093 (KRaft)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kafka-allow-broker-to-controller
  namespace: kafka
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: kafka
      k8s:app.kubernetes.io/component: broker
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
            k8s:app.kubernetes.io/name: kafka
            k8s:app.kubernetes.io/component: controller
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
---
# Broker ↔ broker on 9094 (inter-broker INTERNAL listener)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kafka-allow-broker-interbroker
  namespace: kafka
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: kafka
      k8s:app.kubernetes.io/component: broker
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
            k8s:app.kubernetes.io/name: kafka
            k8s:app.kubernetes.io/component: broker
      toPorts:
        - ports:
            - port: "9094"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
            k8s:app.kubernetes.io/name: kafka
            k8s:app.kubernetes.io/component: broker
      toPorts:
        - ports:
            - port: "9094"
              protocol: TCP
---
# Proxy → brokers on 9094 (proxy dials broker INTERNAL TLS)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kafka-allow-proxy-to-brokers
  namespace: kafka
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: kafka-proxy
      k8s:app.kubernetes.io/component: proxy
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
            k8s:app.kubernetes.io/name: kafka
            k8s:app.kubernetes.io/component: broker
      toPorts:
        - ports:
            - port: "9094"
              protocol: TCP
---
# Broker ingress from proxy on 9094
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kafka-allow-broker-from-proxy
  namespace: kafka
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: kafka
      k8s:app.kubernetes.io/component: broker
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
            k8s:app.kubernetes.io/name: kafka-proxy
            k8s:app.kubernetes.io/component: proxy
      toPorts:
        - ports:
            - port: "9094"
              protocol: TCP
---
# Allow clients in-cluster to reach proxy listener 9094
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kafka-allow-ingress-to-proxy-9094
  namespace: kafka
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: kafka-proxy
      k8s:app.kubernetes.io/component: proxy
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9094"
              protocol: TCP
---
# ingress allowlist for 9092 and 9094
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kafka-lock-down-broker-ingress
  namespace: kafka
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: kafka
      k8s:app.kubernetes.io/component: broker
  ingress:
    # allow other brokers (interbroker)
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
            k8s:app.kubernetes.io/name: kafka
            k8s:app.kubernetes.io/component: broker
      toPorts:
        - ports:
            - port: "9094"
              protocol: TCP

    # allow proxy to hit broker INTERNAL (9094)
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kafka
            k8s:app.kubernetes.io/name: kafka-proxy
            k8s:app.kubernetes.io/component: proxy
      toPorts:
        - ports:
            - port: "9094"
              protocol: TCP
---
# Cluster DNS
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-coredns-to-vpc-dns
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s:k8s-app: kube-dns
  egress:
    - toCIDR:
        - 10.0.0.2/32
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# Kafka DNS egress
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kafka-allow-dns-egress
  namespace: kafka
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# Allows DNS egress for local testing
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-host-dns-and-https-egress
spec:
  endpointSelector:
    matchLabels:
      reserved:host: ""
  egress:
    - toCIDR:
        - 10.0.0.2/32
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
